[project]
name = "mex-extractors"
version = "0.22.0"
description = "ETL pipelines for the RKI Metadata Exchange."
authors = [{ name = "MEx Team", email = "mex@rki.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
urls = { Repository = "https://github.com/robert-koch-institut/mex-extractors" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4,<5",
    "dagster-postgres>=0.25,<1",
    "dagster-webserver>=1,<2",
    "dagster>=1,<2",
    "faker>=33,<34",
    "mex-common @ git+https://github.com/robert-koch-institut/mex-common.git@0.43.0",
    "numpy>=2,<3",
    "openpyxl>=3,<4",
    "pandas>=2,<3",
    "pydantic>=2,<3",
    "pyodbc>=5,<6",
    "pyyaml>=6,<7",
    "requests-ntlm>=1,<2",
    "requests>=2,<3",
    "xlrd>=2,<3",
]
optional-dependencies.dev = [
    "ipdb>=0.13,<1",
    "mypy>=1,<2",
    "pandas-stubs>=2,<3",
    "pytest-cov>=6,<7",
    "pytest-random-order>=1,<2",
    "pytest-xdist>=3,<4",
    "pytest>=8,<9",
    "ruff>=0.7,<1",
    "sphinx>=8,<9",
    "types-beautifulsoup4>=4,<5",
    "types-pytz>=2024,<2025",
    "types-pyyaml>=6,<7",
    "types-requests>=2,<3",
]

[project.scripts]
all-extractors = "mex.extractors.main:run"
artificial = "mex.extractors.artificial.main:run"
biospecimen = "mex.extractors.biospecimen.main:run"
blueant = "mex.extractors.blueant.main:run"
confluence-vvt = "mex.extractors.confluence_vvt.main:run"
datscha-web = "mex.extractors.datscha_web.main:run"
ff-projects = "mex.extractors.ff_projects.main:run"
grippeweb = "mex.extractors.grippeweb.main:run"
ifsg = "mex.extractors.ifsg.main:run"
international-projects = "mex.extractors.international_projects.main:run"
odk = "mex.extractors.odk.main:run"
open-data = "mex.extractors.open_data.main:run"
organigram = "mex.extractors.organigram.main:run"
rdmo = "mex.extractors.rdmo.main:run"
seq-repo = "mex.extractors.seq_repo.main:run"
sumo = "mex.extractors.sumo.main:run"
sync-persons = "mex.extractors.ldap.main:run"
synopse = "mex.extractors.synopse.main:run"
voxco = "mex.extractors.voxco.main:run"
publisher = "mex.extractors.publisher.main:run"

[tool.cruft]
template = "https://github.com/robert-koch-institut/mex-template"
skip = ["CHANGELOG.md", "mex", "tests"]

[tool.dagster]
module_name = "mex.extractors"

[tool.ipdb]
context = 5

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "requests_ntlm.*"
ignore_missing_imports = true

[tool.pdm]
distribution = true

[tool.pdm.scripts]
update-all = { cmd = "pdm update --group :all --update-all --save-compatible" }
lock-all = { cmd = "pdm lock --group :all --python='==3.11.*'" }
install-all = { cmd = "pdm install --group :all --frozen-lockfile" }
export-all = { cmd = "pdm export --group :all --no-hashes -f requirements" }
apidoc = { cmd = "pdm run sphinx-apidoc -f -o docs/source mex" }
sphinx = { cmd = "pdm run sphinx-build -aE -b dirhtml docs docs/dist" }
doc = { composite = ["apidoc", "sphinx"] }
wheel = { cmd = "pdm build --no-sdist" }
mypy-daemon = { cmd = "pdm run dmypy run --timeout 7200 -- mex" }
lint = { cmd = "pre-commit run --all-files" }
unit = { cmd = "pdm run pytest -m 'not integration'" }
test = { cmd = "pdm run pytest --numprocesses=auto --dist=worksteal" }
all = { composite = ["install-all", "lint", "test", "doc"] }

[tool.pydantic-mypy]
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--cov",
    "--no-cov-on-fail",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=95",
    "--cov-branch",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--random-order-bucket=global",
]
markers = "integration: mark a test as integration test"

[tool.ruff]
fix = true
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "AIR",    # Disable airflow specific rules (we are not using airflow)
    "ANN",    # Disable all annotations checks (handled by mypy)
    "COM",    # Disable flake8-commas checks (let ruff format handle that)
    "CPY",    # Disable copyright notice checks (we have LICENSE files)
    "D100",   # Allow missing module docstring (for brevity and speed)
    "D104",   # Allow missing package docstring (for brevity and speed)
    "D203",   # Disallow blank line before class docstring (inverse of D211)
    "D213",   # Disallow multi-line docstring starting at second line (inverse of D212)
    "D406",   # Allow section name ending with newline (google style compat)
    "D407",   # Allow missing dashed underline after section (google style compat)
    "D413",   # Allow missing blank line after last section (google style compat)
    "DJ",     # Disable django specific checks (we are not using django)
    "FBT",    # Disable boolean type hint checks (for more flexibility)
    "FIX",    # Allow committing with open TODOs (don't punish committers)
    "ISC001", # Disable checks for implicitly concatenated strings (formatter compat)
    "N805",   # Allow first argument of a method to be non-self (pydantic compat)
    "N815",   # Allow mixedCase variables in class scope (model compat)
    "PTH123", # Allow using builtin open method (simpler than pathlib)
    "RUF012", # Allow mutable class attributes (pydantic compat)
    "SIM108", # Allow explicit if-else instead of ternary (easier to read)
    "TD003",  # Allow TODOs without ticket link (don't punish TODO writers)
    "TRY003", # Allow long exception message at the raise site (for pydantic)
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = [
    "INP001", # Docs folder does not need to be a package
]
"scripts/**" = [
    "INP001", # Scripts folder does not need to be a package
]
"tests/**" = [
    "ARG005",  # Allow unused lambda arguments for mocking
    "D101",    # Allow missing docstring in public class
    "D102",    # Allow missing docstring in public method
    "D103",    # Allow missing docstring in public function
    "D107",    # Allow missing docstring in `__init__`
    "E501",    # Allow longer lines with test data
    "ISC",     # Allow implicitly concatenated strings
    "N807",    # Allow mocking `__init__`
    "PLR0915", # Allow functions with many statements
    "PLR2004", # Allow comparing with static values
    "PT004",   # Allow public fixtures without returns
    "PT013",   # Allow more flexible pytest imports
    "S101",    # Allow use of `assert` in tests
    "SLF",     # Allow private member access
]
"mex/extractors/biospecimen/**" = ["PD003", "PLR0913", "PTH207"]
"mex/extractors/blueant/**" = ["PLR0913", "PLR2004"]
"mex/extractors/confluence_vvt/**" = ["EM101", "PLR2004", "SIM105"]
"mex/extractors/datscha_web/**" = ["EM102", "PLR2004", "SIM102"]
"mex/extractors/ff_projects/**" = ["EM101", "PD901", "PLR0911", "PLR0913"]
"mex/extractors/grippeweb/**" = ["PLR0913", "SIM118"]
"mex/extractors/ifsg/**" = ["C403", "C416", "PLR0913", "PLR1714", "PLR2004"]
"mex/extractors/international_projects/**" = ["C414", "PD901", "PLR0913"]
"mex/extractors/rdmo/**" = ["EM102", "PLW0127", "TD002"]
"mex/extractors/seq_repo/**" = ["DTZ007", "EM102", "PLR0913", "SIM102"]
"mex/extractors/sumo/**" = ["FLY002", "PD002", "PLR0913", "TD002"]
"mex/extractors/synopse/**" = ["C416", "EM101", "PLR0913", "TD002"]
"mex/extractors/voxco/**" = ["PLR0912", "PLR0913"]
"tests/biospecimen/**" = ["PLR0913"]
"tests/drop/**" = ["ARG001"]
"tests/ff_projects/**" = ["DTZ001"]
"tests/grippeweb/**" = ["PLR0913"]
"tests/ifsg/**" = ["DTZ001", "PLR0913"]
"tests/odk/**" = ["ARG001"]
"tests/rdmo/**" = ["ARG001", "PT012"]
"tests/seq_repo/**" = ["PLR0913"]
"tests/sumo/**" = ["FLY002", "PLR0913"]
"tests/synopse/**" = ["C408", "C419", "PLR0913", "TD002"]
"tests/voxco/**" = ["PLR0913"]
"tests/wikidata/**" = ["INP001", "INP001"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"reflex" = "rx"

[tool.ruff.lint.isort]
known-first-party = ["mex", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["pdm-backend==2.4.3"]
build-backend = "pdm.backend"
